# 3DViewer

./: CMakeLists.txt  Makefile  README.md  README_RUS.md
controller/: s21_controller.cpp  s21_controller.h
interface/: 3DViewer_v2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewidget.cpp  messagewidget.h  messagewidget.ui  openglsettings.cpp  openglsettings.h  openglwidget.cpp  openglwidget.h  openglwidget.ui
misc/: resource.qrc
model/: s21_model.cpp  s21_model.h  s21_transformation.cpp  s21_transformation.h
tests/: s21_test_main.cpp  s21_test_main.h  s21_test_parse.cpp  s21_test_transform.cpp
